# StandAlonePytestMapper

./: README.md  dataPlotter.py  dataPotter.py  dfTemplates.ipynb  logDataclasses.py  logExtractor.py  pyproject.toml  relatory.py  run.sh
docs/: __main__.py  dataPlotter.py  logDataclasses.py  relatory.py  test.ipynb
