[project]
name = "standalonepytestmapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "attrs>=25.1.0",
    "beautifulsoup4>=4.13.3",
    "bleach>=6.2.0",
    "boto3==1.35.99",
    "certifi>=2025.1.31",
    "defusedxml>=0.7.1",
    "execnet>=2.1.1",
    "fastjsonschema>=2.21.1",
    "idna>=3.10",
    "jinja2>=3.1.6",
    "jsonschema>=4.23.0",
    "jsonschema-specifications>=2024.10.1",
    "jupyterlab-pygments>=0.3.0",
    "jupytext>=1.16.7",
    "markdown-it-py>=3.0.0",
    "matplotlib>=3.10.0",
    "mdit-py-plugins>=0.4.2",
    "mdurl>=0.1.2",
    "mistune>=3.1.2",
    "nbclient>=0.10.2",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "plotly>=6.0.0",
    "pytest>=8.3.5",
    "pytest-durations>=1.3.1",
    "pytest-env>=1.1.5",
    "pytest-repeat>=0.9.3",
    "pytest-rerunfailures>=15.0",
    "pytest-xdist>=3.6.1",
    "referencing>=0.36.2",
    "requests>=2.32.3",
    "soupsieve>=2.6",
    "tinycss2>=1.4.0",
    "tqdm>=4.67.1",
    "uuid>=1.30",
    "webencodings>=0.5.1",
]
